# magg

./: .env.example  .gitignore  CLAUDE.md  URI_UPDATE_SUMMARY.md  compose.yaml  contributing.md  dockerfile  pyproject.toml  readme.md  test_repl.py
.github/workflows/: README.md  branch-protection.yml  docker-publish.yml  manual-publish.yml  publish.yml  readme.md  test.yml
docs/: authentication.md  cli-improvements.md  config-reload.md  examples.md  index.md  kits.md  mbro.md  messaging.md  proxy-spec.md  proxy.md
examples/: authentication.py  client_runner_demo.py  config_reload.py  embedding.py  messaging.py  sampling.py  smart_features.md
magg/: __init__.py  __main__.py  auth.py  cli.py  client.py  kit.py  messaging.py  process.py  reload.py  response.py  server.py  settings.py
magg/cli/: __init__.py  __main__.py
magg/client/: __init__.py  proxy.py  runner.py
magg/contrib/: magg.mbro  readme.md
magg/contrib/kit.d/: example.json
magg/core/: __init__.py  config.py
magg/discovery/: __init__.py  catalog.py  metadata.py  search.py
magg/export/: __init__.py
magg/logs/: __init__.py  adapter.py  config.py  defaults.py  filter.py  formatter.py  handler.py  listener.py  queue.py
magg/management/: __init__.py
magg/mbro/: __init__.py  __main__.py  acon.py  arepl.py  cli.py  client.py  command.py  completers.py  formatter.py  launcher.py  multiline.py  parser.py  scripts.py  validator.py
magg/mbro/test/: __init__.py  test_basic_functionality.py  test_cli.py  test_client.py  test_integration.py  test_search_functionality.py  test_tool_calling.py
magg/proxy/: __init__.py  client.py  mixin.py  server.py  types.py
magg/server/: __init__.py  __main__.py  cli.py  defaults.py  manager.py  proxy.py  response.py  runner.py  server.py
magg/test/: README.md  __init__.py  test_auth.py  test_basic.py  test_client_api.py  test_client_mounting.py  test_config.py  test_config_migration.py  test_config_reload.py  test_e2e_mounting.py  test_e2e_simple.py  test_error_handling.py  test_in_memory.py  test_integration.py  test_kit.py  test_kit_cli.py  test_kit_info.py  test_kit_tools.py  test_mbro_cli_overhaul.py  test_mbro_validator.py  test_messaging.py  test_messaging_integration.py  test_mounting.py  test_mounting_debug.py  test_mounting_real.py  test_prefix_handling.py  test_server_add.py  test_server_mounting_integration.py  test_server_removal.py  test_status_check.py  test_tool_delegation.py  test_transport.py
magg/test/mbro/: test_basic_functionality.py  test_cli.py  test_client.py  test_integration.py  test_json_parsing.py
magg/util/: __init__.py  custom_transports.py  paths.py  stdio_patch.py  system.py  terminal.py  transform.py  transport.py  transports.py  uri.py
magg/utils/: __init__.py  server_runner.py  transport.py
mbro/: __init__.py  cli.py
mbro/test/: test_cli.py  test_client.py  test_integration.py  test_search_functionality.py
scripts/: fix_whitespace.py  validate_manual_release.py
test/magg/: test_client_api.py  test_config.py  test_config_reload.py  test_e2e_mounting.py  test_error_handling.py  test_in_memory.py  test_kit_cli.py  test_mbro_cli_overhaul.py  test_messaging.py  test_messaging_integration.py  test_mounting.py  test_mounting_debug.py  test_mounting_real.py  test_prefix_handling.py  test_server_add.py  test_server_removal.py  test_transport.py
