[project]
name = "magg"
version = "0.9.0"
requires-python = ">=3.12"
description = "MCP Aggregator"
authors = [{ name = "Phillip Sitbon", email = "phillip.sitbon@gmail.com"}]
readme = "readme.md"
license = {text = "AGPL-3.0-or-later"}
license-files = ["license.md"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: Proxy Servers",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
keywords = [
    "model",
    "context",
    "protocol",
    "ai",
    "agent",
    "mcp",
    "aggregator",
    "proxy",
    "fastmcp",
    "aiohttp",
    "pydantic",
    "pydantic-settings",
    "rich",
]
packages = [{include = "magg"}]
dependencies = [
    "fastmcp>=2.8.0",
    "aiohttp>=3.12.13",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.0",
    "rich>=14.0.0",
    "prompt-toolkit>=3.0.51",
    "cryptography>=45.0.4",
    "pyjwt>=2.10.1",
    "watchdog>=6.0.0",
    "art>=6.5",
]

[project.urls]
Homepage = "https://github.com/sitbon/magg"
Repository = "https://github.com/sitbon/magg.git"
Documentation = "https://github.com/sitbon/magg#readme"
Issues = "https://github.com/sitbon/magg/issues"
"Release Notes" = "https://github.com/sitbon/magg/releases"

[project.scripts]
magg = "magg.cli:main"
mbro = "magg.mbro.cli:main"

[project.optional-dependencies]
test = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
]

[dependency-groups]
dev = [
    "pytest>=8.4.0",
    "pytest-asyncio>=1.0.0",
    "poethepoet>=0.35.0",
    "keyring>=25.6.0",
    "anthropic>=0.54.0",
    "pyjwt>=2.10.1",
    "packaging>=25.0",
]

[tool.poe]
verbosity = -1

[tool.poe.tasks]
fix-whitespace.cmd = "python scripts/fix_whitespace.py"
fix-whitespace.description = "Fix trailing whitespace in all files"

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests (deselect with '-m \"not integration\"')",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
